<resources>
  <string name="app_name">Flash Me</string>
  <string name="action_settings">Settings</string>


  <string name="enter_deck_name">Deck Name</string>
  <string name="add_deck_button">Add Deck</string>
  <string name="recent_deck">Recent Deck</string>
  <string name="recent_deck_button">Recent Deck</string>
  <string name="deck_list">Deck List</string>
  <string name="deck_tutorial_button">Tutorial Deck</string>
  <string name="add_card_button">Add Card</string>
  <string name="review_card_button">Review</string>
  <string name="front_text">Front</string>
  <string name="back_text">Back Text</string>
  <string name="next">Next</string>
  <string name="dialogue_cancel">Cancel</string>
  <string name="dialogue_ok">Cancel</string>
</resources>
