<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toRightOf="parent"
    app:layout_constraintRight_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <EditText
      android:id="@+id/front_text"
      android:layout_width="match_parent"
      android:layout_height="100dp"
      android:layout_weight="1"
      android:gravity="center"
      android:hint="@string/front_text"
      app:layout_constraintLeft_toRightOf="parent"
      app:layout_constraintRight_toLeftOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toTopOf="@+id/back_text"
      android:layout_margin="10dp"
      />

    <EditText
      android:id="@+id/back_text"
      android:layout_width="match_parent"
      android:layout_height="100dp"
      android:layout_weight="1"
      android:gravity="center"
      android:hint="@string/back_text"
      app:layout_constraintLeft_toRightOf="parent"
      app:layout_constraintRight_toLeftOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/front_text"
      android:layout_margin="10dp"
      />

    <Button
      android:id="@+id/button_choose_keyword"
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintRight_toLeftOf="@+id/button_return_todeck"
      app:layout_constraintTop_toBottomOf="@+id/back_text"
      app:layout_constraintLeft_toRightOf="parent"
      android:text="@string/next"/>



    <Button
      android:id="@+id/button_return_todeck"
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:onClick="goToDeckFragment"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toRightOf="@+id/button_choose_keyword"
      app:layout_constraintRight_toLeftOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/back_text"
      android:text="@string/deck_list"
      />


  </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>